Make backend deploy-ready: configurable CORS/uploads, Flyway migrations, Docker, Render docs
- CORS origins and the upload directory are now configurable via app.cors.allowed-origins
  and app.upload.dir instead of hardcoded to localhost/a relative path
- Replaced Hibernate's ddl-auto=update with Flyway-managed migrations (ddl-auto=validate),
  removing the risk of a future schema change silently failing in production the way it did
  twice this session. This Spring Boot version ships no Flyway auto-configuration at all
  (confirmed absent from every spring-boot-* artifact), so migrations are wired manually in
  main() before the Spring context exists; verified against both the existing dev database
  (baselines cleanly) and a fresh empty database (creates the full schema from scratch)
- Added a scheduled sweep to the rate limiter so its per-IP tracking map no longer grows
  unboundedly on a long-running instance
- server.port now reads Render's injected PORT env var
- Added backend/Dockerfile (+ .dockerignore) for Render's Docker runtime, and a full
  deployment section in README.md covering the database, backend env vars, the ephemeral-
  filesystem tradeoff for uploaded photos, and the frontend

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>